@@ -1,6 +1,7 @@
 0.7.2
 [Alexandr Topilski]
 - [Redis] Set ttl context menu
+- [Memcached] EXPIRE function
 
 0.7.1 / August 6, 2016
 [Alexandr Topilski]
